tests/invalid/set_attribute_on_non_class/main.py
x: int = 5
x.foo = 1
